[gd_scene load_steps=7 format=3 uid="uid://78sbfbha0cig"]

[ext_resource type="Texture2D" uid="uid://bvi7yxcds0g0x" path="res://img/background/tv_on.png" id="1_htrc2"]
[ext_resource type="Script" uid="uid://cvhmspx4h4exh" path="res://loading_screen.gd" id="1_weff3"]
[ext_resource type="Texture2D" uid="uid://e0w75a2imcg" path="res://img/background/blueSky.png" id="2_74xf4"]
[ext_resource type="Texture2D" uid="uid://c6lcu04txfpa5" path="res://img/background/tv_off.png" id="2_weff3"]
[ext_resource type="Texture2D" uid="uid://ccqh073skjo50" path="res://img/tv_empty.png" id="3_pa1l2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_74xf4"]
size = Vector2(52.0857, 24.0984)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_weff3")

[node name="BlueSky" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
position = Vector2(709, 267)
scale = Vector2(1.68167, 1.68167)
texture = ExtResource("2_74xf4")

[node name="Tv_ram" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(502, 268)
scale = Vector2(8.352, 8.352)
texture = ExtResource("3_pa1l2")

[node name="Area2D" type="Area2D" parent="Tv_ram"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tv_ram/Area2D"]
position = Vector2(-1.01652, 3.99485)
shape = SubResource("RectangleShape2D_74xf4")

[node name="TvOn" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(501.5, 267.75)
scale = Vector2(8.35156, 8.35156)
texture = ExtResource("1_htrc2")

[node name="TvOff" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(501.5, 267.75)
scale = Vector2(8.352, 8.352)
texture = ExtResource("2_weff3")
